crates/analyzer/tests/snapshots/errors__issue_451.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(&path, test_files::fixture(path))"
---
error: duplicate function names in `contract o`
  ┌─ compile_errors/issue_451.fe:2:5
  │    
2 │ ╭       pub fn bar(x: u256, y: u256) -> bool {
3 │ │           return
4 │ │       }
  │ ╰───────^ `bar` first defined here
5 │     
6 │   ╭     pub fn bar() {
7 │   │         s
8 │   │     }
  │   ╰─────' `bar` redefined here

error: expected function to return `bool` but was `()`
  ┌─ compile_errors/issue_451.fe:3:9
  │
3 │         return
  │         ^^^^^^

error: cannot find value `s` in this scope
  ┌─ compile_errors/issue_451.fe:7:9
  │
7 │         s
  │         ^ undefined


